@@ -114,3 +114,5 @@ v1.3
 - Added simple classification tool
 - Remove '_' from DeviceName
 - Fixed NPE in Pig udf
+- Shaded the used parts of Spring and the Antlr4 runtime to minimize the impact on downstream applications.
+
